# claude-arena60-checkpoint-a

./: Agents.md  README.md  vcpkg.json
.meta/: state.yml
dev-history/: IMPROVEMENTS.md  PROTOCOL.md  (+6 more)
server/: CMakeLists.txt
server/include/arena60/core/: config.h  game_loop.h
server/include/arena60/game/: game_session.h  movement.h  player_state.h
server/include/arena60/matchmaking/: match.h  match_request.h
server/include/arena60/network/: metrics_http_server.h  profile_http_router.h  websocket_server.h
server/include/arena60/stats/: leaderboard_store.h  match_stats.h  player_profile_service.h
server/include/arena60/storage/: postgres_storage.h
server/src/: CMakeLists.txt  main.cpp
server/src/core/: config.cpp  game_loop.cpp
server/src/game/: game_session.cpp
server/src/matchmaking/: match_queue.cpp  match_request.cpp  matchmaker.cpp
server/src/network/: metrics_http_server.cpp  profile_http_router.cpp  websocket_server.cpp
server/src/stats/: leaderboard_store.cpp  match_stats.cpp  player_profile_service.cpp
server/src/storage/: postgres_storage.cpp
server/tests/: CMakeLists.txt
server/tests/integration/: test_matchmaker_flow.cpp  test_profile_http.cpp  test_websocket_server.cpp
server/tests/performance/: test_matchmaking_perf.cpp  test_profile_service_perf.cpp  test_tick_variance.cpp
server/tests/unit/: test_game_loop.cpp  test_game_session.cpp  test_leaderboard_store.cpp  test_match_queue.cpp  test_match_stats.cpp  test_matchmaker.cpp  test_metrics_http_server.cpp  test_player_profile_service.cpp  test_postgres_storage.cpp
(+28 files in other folders)
